
0.16 release

	* make tracker back-off configurable
	* don't restart the swarm after downloading metadata from magnet links
	* lower the default tracker retry intervals
	* support banning web seeds sending corrupt data
	* don't let hung outgoing connection attempts block incoming connections
	* improve SSL torrent support by using SNI and a single SSL listen socket
	* improved peer exchange performance by sharing incoming connections which advertize listen port 
	* deprecate set_ratio(), and per-peer rate limits
	* add web seed support for torrents with pad files
	* introduced a more scalable API for torrent status updates (post_torrent_updates()) and updated client_test to use it
	* updated the API to add_torrent_params turning all bools into flags of a flags field
	* added async_add_torrent() function to significantly improve performance when
	  adding many torrents
	* change peer_states to be a bitmask (bw_limit, bw_network, bw_disk)
	* changed semantics of send_buffer_watermark_factor to be specified as a percentage
	* add incoming_connection_alert for logging all successful incoming connections
	* feature to encrypt peer connections with a secret AES-256 key stored in .torrent file
	* deprecated compact storage allocation
	* close files in separate thread on systems where close() may block (Mac OS X for instance)
	* don't create all directories up front when adding torrents
	* support DHT scrape
	* added support for fadvise/F_RDADVISE for improved disk read performance
	* introduced pop_alerts() which pops the entire alert queue in a single call
	* support saving metadata in resume file, enable it by default for magnet links
	* support for receiving multi announce messages for local peer discovery
	* added session::listen_no_system_port flag to prevent libtorrent from ever binding the listen socket to port 0
	* added option to not recheck on missing or incomplete resume data
	* extended stats logging with statistics=on builds